@@ -2,15 +2,11 @@ package com.testmart.demo.service;
 
 import com.testmart.demo.model.*;
 import com.testmart.demo.service.apireponse.ApiCartReponse;
+import com.testmart.demo.utils.ResponseFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -24,56 +20,34 @@ public class CartServiceImpl implements CartService<Cart>{
     private static final Logger logger = LoggerFactory.getLogger(CartServiceImpl.class);
 
     String CARTS_URL = "https://dummyjson.com/carts/";
-    private HttpHeaders headers;
-
-    @Autowired
-    RestTemplate restTemplate;
 
     @Autowired
     ProductService productService;
 
+    @Autowired
+    ResponseFactory<Cart> cartResponseFactory;
+
+    @Autowired
+    ResponseFactory<ApiCartReponse> apiCartReponseResponseFactory;
+
     Comparator<Cart> cartTotalComparator
             = Comparator.comparing(Cart::getTotal);
 
-    public CartServiceImpl(){
-        headers = new HttpHeaders();
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
-    }
-
     @Override
     public List<Cart> getAllCarts() {
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
-        ResponseEntity<ApiCartReponse> response = restTemplate.exchange(
-                CARTS_URL,
-                HttpMethod.GET,
-                null,
-                ApiCartReponse.class);
-        Cart[] cartResponse = response.getBody().getCarts();
+        Cart[] cartResponse = apiCartReponseResponseFactory.execute(CARTS_URL, ApiCartReponse.class).getCarts();
         return Arrays.asList(cartResponse);
     }
 
     @Override
     public Cart getCart(Integer cartId) {
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
-        ResponseEntity<Cart> response = restTemplate.exchange(
-                CARTS_URL+cartId,
-                HttpMethod.GET,
-                null,
-                Cart.class);
-        return response.getBody();
+        return cartResponseFactory.execute(CARTS_URL+cartId, Cart.class);
     }
 
     @Override
     public List<Cart> getUserCarts(Integer userId) {
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
-        ResponseEntity<ApiCartReponse> response = restTemplate.exchange(
-                CARTS_URL+"user/"+userId,
-                HttpMethod.GET,
-                null,
-                ApiCartReponse.class);
-
-        Cart[] cartResponse = response.getBody().getCarts();
-        return Arrays.asList(cartResponse);
+        Cart[] cartResponse = apiCartReponseResponseFactory.execute(CARTS_URL+"user/"+userId, ApiCartReponse.class).getCarts();
+        return List.of(cartResponse);
     }
 
     public Cart getCartWithHighestTotal(){
